@@ -162,6 +162,7 @@
 #define ATTR_reported    	"reported"
 #define ATTR_intcmd      "inter_cmd"
 #define ATTR_P           "proxy_user"
+#define ATTR_node_exclusive "node_exclusive"
 
 #ifdef USEJOBCREATE
 #define ATTR_pagg         "pagg_id"
